Fix section titles overflow issue

--- a/src/stylesheets/objects/typography.styl
+++ b/src/stylesheets/objects/typography.styl
@@ -18,18 +18,16 @@ Styleguide 2.1.1
   font-weight: bold
   line-height: 1
 
-  position: relative
+  display: flex
   font-size: 18px
-  overflow: hidden
 
   &:after
     margin-left: 10px
     content: ""
-    width: 100%
-    position: absolute
     height: 1px
     margin-top: 10px
     background-color: $colors.element-light
+    flex-grow: 1
 
 
 /*
